force-app/main/default/objects/Product2/fields/Default_Price__c.field-meta.xml
<CustomField>
    <fullName>Default_Price__c</fullName>
    <description>Required for Product Catalog. This field allows you to have a default price and thus calculate the cost of a given order in the Catalog.</description>
    <inlineHelpText>Required for Product Catalog. This field allows you to have a default price and thus calculate the cost of a given order in the Catalog.</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>