force-app/main/default/objects/Product2/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <label>Inventory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Stock</fullName>
                <default>true</default>
                <label>In Stock</label>
            </value>
            <value>
                <fullName>Limited Availability</fullName>
            </value>
            <value>
                <fullName>Out of Stock</fullName>
            </value>
            <value>
                <fullName>On Backorder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>