force-app/main/default/objects/Product2/fields/Max_Qty__c.field-meta.xml
<CustomField>
    <fullName>Max_Qty__c</fullName>
    <description>The Maximum Quantity of Products</description>
    <label>Maximum Qty</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>