force-app/main/default/objects/Product2/fields/Min_Qty__c.field-meta.xml
<CustomField>
    <fullName>Min_Qty__c</fullName>
    <description>The Minimum Quantity of Products</description>
    <label>Minimum Qty</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>