force-app/main/default/objects/Product2/fields/Mobile_Ready__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the Product is ready to use with the Catalog mobile app.</description>
    <inlineHelpText>This field must be CHECKED to show the product in the Product Catalog. Indicates the Product is ready to use with the Catalog mobile app.</inlineHelpText>
    <label>Mobile Ready?</label>
    <type>Checkbox</type>
</CustomField>