force-app/main/default/objects/Product2/fields/Product_Classification__c.field-meta.xml
<CustomField>
    <fullName>Product_Classification__c</fullName>
    <label>Product Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>